# Relaytic

./: .gitignore  .mcp.json  AGENTS.md  ARCHITECTURE.md  ARCHITECTURE_CONTRACT.md  CONTRIBUTING.md  HARNESS_CONTRACT.md  IMPLEMENTATION_STATUS.md  INTEROPERABILITY.md  LICENSE  MIGRATION_MAP.md  OPEN_SOURCE_STACK.md  PROJECT_LAYOUT.md  README.md  RELAYTIC_BUILD_MASTER.md  RELAYTIC_SLICING_PLAN.md  RELAYTIC_VISION_MASTER.md  RUNTIME.md  SECURITY.md  pyproject.toml
.agents/skills/relaytic/: SKILL.md
.claude/agents/: relaytic.md
.githooks/: README.md  pre-commit
.github/workflows/: ci.yml
configs/: default.yaml
connectors/chatgpt/: README.md
data/: README.md
data/public/: public_binary_classification_dataset.csv  public_fraud_screening_dataset.csv  public_testbench_dataset_20k_minmax.meta.json
docs/build_slices/: phase_00.md  phase_01.md  phase_02.md  phase_03.md  phase_04.md  phase_05.md  phase_05a.md  phase_06.md  phase_07.md  phase_08.md  phase_08a.md  phase_08b.md  phase_09.md  phase_09a.md  phase_09b.md  phase_09c.md  phase_09d.md  phase_09e.md  phase_09f.md  phase_10.md  phase_10a.md  phase_10b.md  phase_10c.md  phase_11.md  phase_11a.md  phase_11b.md  phase_11c.md  phase_11d.md  phase_11e.md  phase_11f.md  phase_11g.md  phase_12.md  phase_12a.md  phase_12b.md  phase_12c.md  phase_12d.md  phase_13.md  phase_13a.md  phase_13b.md  phase_13c.md  (+30 more)
docs/handbooks/: relaytic_agent_handbook.md  relaytic_demo_walkthrough.md  relaytic_user_handbook.md
docs/specs/: aml_benchmark_pack.md  aml_frontier_contract.md  capability_academy_contract.md  external_agent_continuation_contract.md  flagship_demo_pack.md  governed_learnings_schema.md  handoff_result_migration.md  learnings_migration_contract.md  mission_control_contract.md  mission_control_flows.md  model_competitiveness_contract.md  paper_benchmark_pack.md  performance_recovery_contract.md  result_contract_schema.md  temporal_benchmark_pack.md  test_and_proof_matrix.md  workspace_lifecycle.md
scripts/: bootstrap.ps1  bootstrap.sh  check_push_readiness.py  install_relaytic.py
skills/relaytic/: SKILL.md
src/corr2surrogate/: __init__.py
src/corr2surrogate/agents/: agent1_analyst.py  agent2_modeler.py  prompt_manager.py
src/corr2surrogate/analytics/: __init__.py  correlations.py  model_recommendation.py  ranking.py  reporting.py
src/corr2surrogate/core/: __init__.py  config.py  logging.py  schemas.py
src/corr2surrogate/ingestion/: csv_loader.py
src/corr2surrogate/modeling/: __init__.py  baselines.py  checkpoints.py  classifiers.py  evaluation.py  inference.py  normalization.py  optuna_tuning.py  performance_feedback.py  training.py  uncertainty.py
src/corr2surrogate/orchestration/: __init__.py  default_tools.py  handoff_contract.py  harness_runner.py  local_llm_setup.py  local_provider.py  runtime_policy.py  tool_registry.py  workflow.py
src/corr2surrogate/persistence/: __init__.py  artifact_store.py  run_store.py
src/corr2surrogate/security/: __init__.py  git_guard.py
src/corr2surrogate/ui/: __init__.py  cli.py
src/relaytic/: __init__.py
src/relaytic/agents/: __init__.py  agent1_analyst.py  agent2_modeler.py  prompt_manager.py
src/relaytic/aml/: __init__.py  agents.py
src/relaytic/analytics/: __init__.py  architecture_routing.py  correlations.py  experiment_design.py  expert_priors.py  model_recommendation.py  quality_checks.py  reporting.py  sensor_diagnostics.py  stationarity.py  task_contracts.py  task_detection.py  temporal_engine.py
src/relaytic/artifacts/: __init__.py  manifests.py
src/relaytic/assist/: __init__.py  agents.py  models.py  storage.py
src/relaytic/autonomy/: __init__.py  agents.py  models.py  storage.py
tests/: aml_workload_fixtures.py  conftest.py  domain_datasets.py  paper_benchmark_datasets.py  public_datasets.py  push_smoke_fixtures.py  research_test_server.py  temporal_benchmark_datasets.py  test_agent1_analysis_tool.py  test_agent_loop.py  test_aml_graph_artifacts.py  test_aml_realworld_compatibility.py  test_architecture_routing.py  test_assist_agents.py  test_benchmark_imported_architectures.py  test_branding_surface.py  test_casework_artifacts.py  test_cli.py  test_cli_access_surface.py  test_cli_aml_realworld.py  test_cli_mvp_readiness.py  test_cli_slice01.py  test_cli_slice02.py  test_cli_slice03.py  test_cli_slice04.py  test_cli_slice05.py  test_cli_slice06.py  test_cli_slice07.py  test_cli_slice08.py  test_cli_slice08a.py  test_cli_slice09.py  test_cli_slice09a.py  test_cli_slice09b.py  test_cli_slice09c.py  test_cli_slice09d.py  test_cli_slice09e.py  test_cli_slice10.py  test_cli_slice10a.py  test_cli_slice10b.py  test_cli_slice10c.py  (+123 more)
(+214 files in other folders)
