[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "corr2surrogate"
version = "0.1.0"
description = "Local-first agentic framework from real-world data to surrogate models"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "Corr2Surrogate Contributors" },
]
keywords = ["surrogate-modeling", "time-series", "classification", "local-llm", "agentic-workflow"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "numpy>=1.25",
  "pandas>=2.0",
  "openpyxl>=3.1",
  "pyyaml>=6.0",
]

[project.scripts]
corr2surrogate = "corr2surrogate.ui.cli:main"
c2s-guard = "corr2surrogate.security.git_guard:main"

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]
stats = [
  "scipy>=1.11",
]
viz = [
  "matplotlib>=3.8",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"corr2surrogate.agents.prompts" = ["*.txt"]
